# FG

./: .gitignore  Cargo.toml  coeffs.txt  piaf.m  points.mat  points.txt  points2.txt  pointsLine.txt  pointsNote.txt  pts.txt
doc/: aliases.js  search-index.js  settings.html  source-files.js
doc/complex/: all.html  index.html  sidebar-items.js  struct.Complex.html
doc/implementors/core/clone/: trait.Clone.js
doc/implementors/core/fmt/: trait.Debug.js
doc/implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
doc/implementors/core/ops/arith/: trait.Add.js  trait.AddAssign.js  trait.DivAssign.js  trait.Mul.js  trait.MulAssign.js  trait.Sub.js  trait.SubAssign.js
doc/implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
doc/src/complex/: complex.rs.html
src/: main.rs
src/fg/: complex.rs  fgif.rs  fourier.rs  fourier2.rs  gif.rs  mod.rs  read.rs  spline.rs
src/old/: fourier.rs  gif.rs
