[package]
name = "fg"
version = "0.2.0"
repository = "https://github.com/Rayerdyne/FG"
authors = ["Rayerdyne <francois.straet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = {version = "0.19.0", path = "../nalgebra"}
gif = "0.10.3"
clap = "2.33.0"